# search-natural-lang

./: .gitignore
.ai/logs/: 2026-03-17-dockerize-embeddings.md  2026-03-26-fastapi-search-ui.md  2026-03-26-fix-solr-error-details.md  2026-03-26-fix-solr-uri-too-long.md  2026-03-30-generate-embeddings-cli-progress.md  2026-03-30-simplify-docker-setup.md  2026-03-30-simplify-search-ui-docker.md  2026-03-31-cursor-not-found-resilience.md
.ai/plans/: 001-dockerize-embeddings-scripts.md  002-improve-load-solr.md  003-fastapi-search-ui-for-solr-vector-retrieval.md  004-add-cli-options-generate-embedding.md  005-simplify-docker-setup.md  006-simplify-search-ui-docker-setup.md  007-handle-cursor-not-found-auto-resume.md
embeddings/: .env.example  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  generate_embeddings.py  load_solr.py  pyproject.toml  set_env.sh
embeddings/references/: generate.py  generate_embeddings_solr.py  generate_langgraph.py  generate_save_solr.py  process_embeddings.py
search_ui/: .env.example  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
search_ui/app/: config.py  main.py  models.py
search_ui/app/clients/: ollama.py  solr.py
search_ui/app/static/: app.js  index.html  styles.css
search_ui/tests/: test_app.py
