[project]
name = "search-ui"
version = "0.1.0"
description = "FastAPI search UI for Solr vector and keyword retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
